cockroachlabs-preview-main/docs/v25.2/ui-insights-page.mdx
---
title: "Insights Page"
old_description: "The Insights page exposes problems that CockroachDB has detected in your workloads and schemas."
---

import { InlineImage } from "/snippets/InlineImage.jsx";

<Note>
On a [secure cluster](/docs/v25.2/secure-a-cluster), you must be an [`admin` user](/docs/v25.2/security-reference/authorization#admin-role) or a SQL user with the [`VIEWACTIVITY`](/docs/v25.2/security-reference/authorization#viewactivity) or [`VIEWACTIVITYREDACTED`](/docs/v25.2/security-reference/authorization#viewactivityredacted) [system privilege](/docs/v25.2/security-reference/authorization#supported-privileges) (or the legacy `VIEWACTIVITY` [role option](/docs/v25.2/security-reference/authorization#role-options)) to access this area of the DB Console. Refer to [DB Console security](/docs/v25.2/ui-overview#db-console-security-considerations).
</Note>

The **Insights** page exposes problems that CockroachDB has detected in your workloads and schemas. The page also offers recommendations to improve the performance of your workloads. These are called *insights* in the DB Console.

The **Insights** page helps you:

- Identify SQL statements with [high retry counts](/docs/v25.2/transactions#automatic-retries), [slow execution](/docs/v25.2/query-behavior-troubleshooting#identify-slow-queries), or [suboptimal plans](/docs/v25.2/cost-based-optimizer).
- Identify [indexes](/docs/v25.2/indexes) that should be created, altered, replaced, or dropped to improve performance.

## Workload Insights tab

The **Workload Insights** tab displays insights related to [transaction](/docs/v25.2/transactions) and [statement](/docs/v25.2/show-statements) executions.

### Transaction Executions view

To display this view, click **Insights** in the left-hand navigation of the DB Console and select **Workload Insights &gt; Transaction Executions**. The **Transaction Executions** view provides an overview of all [transaction executions](/docs/v25.2/transactions) that have been flagged with insights.

<Note>
The rows in this page are populated from the [`crdb_internal.transaction_contention_events`](/docs/v25.2/crdb-internal#transaction_contention_events) and `crdb_internal.cluster_txn_execution_insights` tables.

- The results displayed in the **Transaction Executions** view will be available as long as a corresponding row in the `crdb_internal.transaction_contention_events` or `crdb_internal.cluster_txn_execution_insights` tables exists. The rows in `crdb_internal.transaction_contention_events` on each node must use less space than `sql.contention.event_store.capacity`, and the rows in `crdb_internal.transaction_contention_events` cannot exceed `sql.insights.execution_insights_capacity`.
- The default tracing behavior captures a small percent of transactions so not all contention events will be recorded. When investigating [transaction contention](/docs/v25.2/performance-best-practices-overview#transaction-contention), you can set the [`sql.trace.txn.enable_threshold` cluster setting](/docs/v25.2/cluster-settings#setting-sql-trace-txn-enable-threshold) to always capture contention events.
</Note>

The transaction insights table has the following columns:

<table><thead><tr><th>Column</th><th>Description</th></tr></thead><tbody><tr><td>Latest Transaction Execution ID</td><td>The execution ID of the latest execution with the transaction fingerprint. To view <a href="#transaction-execution-details">details of the execution</a>, click the execution ID.</td></tr><tr><td>Transaction Fingerprint ID</td><td>The transaction fingerprint ID of the latest transaction execution.</td></tr><tr><td>Transaction Execution</td><td>The transaction fingerprint of the latest transaction execution.</td></tr><tr><td>Status</td><td>The status of the transaction: <code>Failed</code> or <code>Completed</code>.</td></tr><tr><td>Insights</td><td>The <a href="#workload-insight-types">insight type</a> for the transaction execution.</td></tr><tr><td>Start Time (UTC)</td><td>The timestamp when the transaction execution started.</td></tr><tr><td>Contention Time</td><td>The amount of time the transaction execution spent waiting in <a href="/docs/v25.2/performance-best-practices-overview#transaction-contention">contention</a>.</td></tr><tr><td>CPU Time</td><td>The amount of CPU time spent executing the transaction. The CPU time represents the time spent and work done within SQL execution operators.<br/><br/>The CPU time includes time spent in the <a href="/docs/v25.2/architecture/sql-layer">SQL layer</a>. It does not include time spent in the <a href="/docs/v25.2/architecture/storage-layer">storage layer</a>.</td></tr><tr><td>Application Name</td><td>The name specified by the <a href="/docs/v25.2/show-vars#supported-variables"><code>application&#95;name</code> session setting</a>.</td></tr></tbody></table>

### Transaction Execution details

The transaction execution details view provides more information on a transaction execution insight.

#### Default details

This information is displayed for all insight types.

<table><thead><tr><th>Field/Column</th><th>Description</th></tr></thead><tbody><tr><td>Start Time</td><td>The timestamp when the transaction execution started.</td></tr><tr><td>End Time</td><td>The timestamp when the transaction execution ended.</td></tr><tr><td>Elapsed Time</td><td>The time that elapsed during transaction execution.</td></tr><tr><td>CPU Time</td><td>The amount of CPU time spent executing the transaction. The CPU time represents the time spent and work done within SQL execution operators. The CPU time includes time spent in the <a href="/docs/v25.2/architecture/sql-layer">SQL layer</a>. It does not include time spent in the <a href="/docs/v25.2/architecture/storage-layer">storage layer</a>.</td></tr><tr><td>Rows Read</td><td>The total number of rows read by the transaction execution.</td></tr><tr><td>Rows Written</td><td>The total number of rows written by the transaction execution.</td></tr><tr><td>Priority</td><td>The <a href="/docs/v25.2/transactions#set-transaction-priority">priority</a> of the transaction execution.</td></tr><tr><td>Number of Retries</td><td>The total number of retries of the transaction.</td></tr><tr><td>Session ID</td><td>The ID of the <a href="/docs/v25.2/ui-sessions-page">session</a> the transaction was executed from.</td></tr><tr><td>Application</td><td>The name specified by the <a href="/docs/v25.2/show-vars#supported-variables"><code>application&#95;name</code> session setting</a>.</td></tr><tr><td>Transaction Fingerprint ID</td><td>The fingerprint ID of the transaction execution. To view <a href="/docs/v25.2/ui-transactions-page#transaction-details-page">details of the transaction</a>, click the fingerprint ID.</td></tr><tr><td>Insights</td><td>The <a href="#workload-insight-types">insight type</a>.</td></tr><tr><td>Details</td><td>Provides details on the insight. For example, if the insight type is High Contention, <strong>Time Spent Waiting</strong> and <strong>Description</strong> are displayed. If the insight type is Failed Execution, <strong>Error Code</strong> and <strong>Error Message</strong> are displayed.</td></tr></tbody></table>

#### Conditional details

Additional information is displayed for the following insight types:

1. [**High Contention**](#high-contention): All transaction executions flagged with this insight type will display a **Transaction with ID &#123;transaction ID&#125; waited on** section which provides details of the blocking transaction execution.
2. [**Failed Execution**](#failed-execution): Certain transaction executions flagged with this insight type will display a **Failed Execution** section with **Conflicting Transaction** and **Conflicting Location** information. The following 3 conditions are required:
    - The [`sql.contention.record_serialization_conflicts.enabled`](/docs/v25.2/cluster-settings#setting-sql-contention-record-serialization-conflicts-enabled) cluster setting is set to `true` (default).
    - **Error Code** is `40001`, a `serialization_failure`.
    - **Error Message** includes [`RETRY_SERIALIZABLE`](/docs/v25.2/transaction-retry-error-reference#retry_serializable) `- failed preemptive refresh due to conflicting locks`.

<table><thead><tr><th>Field/Column</th><th>Insight Type(s)</th><th>Description</th></tr></thead><tbody><tr><td>Transaction Execution &#91;ID&#93;</td><td>High Contention,<br/>Failed Execution</td><td>The execution ID of the blocking or conflicting transaction execution.</td></tr><tr><td>Transaction Fingerprint &#91;ID&#93;</td><td>High Contention,<br/>Failed Execution</td><td>The transaction fingerprint ID of the blocking or conflicting transaction execution. For a Failed Execution, view <a href="/docs/v25.2/ui-transactions-page#transaction-details-page">details of the transaction fingerprint</a> by clicking the transaction fingerprint ID.</td></tr><tr><td>Statement Waiting Execution ID</td><td>High Contention</td><td>The execution ID of the waiting statement.</td></tr><tr><td>Statement Waiting Fingerprint ID</td><td>High Contention</td><td>The statement fingerprint ID of the waiting statement.</td></tr><tr><td>Transaction Execution</td><td>High Contention</td><td>The queries attempted in the transaction.</td></tr><tr><td>Contention Start Time (UTC)</td><td>High Contention</td><td>The timestamp at which <a href="/docs/v25.2/performance-best-practices-overview#transaction-contention">contention</a> was detected for the transaction.</td></tr><tr><td>Contention Time</td><td>High Contention</td><td>The time that transactions with this execution ID were <a href="/docs/v25.2/performance-best-practices-overview#understanding-and-avoiding-transaction-contention">in contention</a> with other transactions within the specified time interval.</td></tr><tr><td>Schema Name</td><td>High Contention</td><td>The name of the contended schema.</td></tr><tr><td>Database &#91;Name&#93;</td><td>High Contention,<br/>Failed Execution</td><td>The name of the contended or conflicting database.</td></tr><tr><td>Table &#91;Name&#93;</td><td>High Contention,<br/>Failed Execution</td><td>The name of the contended or conflicting table.</td></tr><tr><td>Index &#91;Name&#93;</td><td>High Contention,<br/>Failed Execution</td><td>The name of the contended or conflicting index.</td></tr></tbody></table>

### Statement Executions view

The **Statement Executions** view provides an overview of all [statement executions](/docs/v25.2/show-statements) that have been flagged with insights.

To display this view, click **Insights** in the left-hand navigation of the DB Console and select **Workload Insights &gt; Statement Executions**.

<Note>
The rows in this page are populated from the [`crdb_internal.cluster_execution_insights`](/docs/v25.2/crdb-internal) table.
</Note>

- The results displayed on the **Statement Executions** view will be available as long as the number of rows in each node is less than the [`sql.insights.execution_insights_capacity` cluster setting](/docs/v25.2/cluster-settings#setting-sql-insights-execution-insights-capacity).
- The default tracing behavior captures a small percent of transactions, so not all contention events will be recorded. When investigating transaction contention, you can set the [`sql.trace.txn.enable_threshold` cluster setting](/docs/v25.2/cluster-settings#setting-sql-trace-txn-enable-threshold) to always capture contention events.

Click **Columns** to select the columns to display in the table.

The statement insights table has the following columns available:

<table><thead><tr><th>Column</th><th>Description</th></tr></thead><tbody><tr><td>Latest Statement Execution ID</td><td>The execution ID of the latest execution with the statement fingerprint. To view <a href="#statement-execution-details">details of the execution</a>, click the execution ID.</td></tr><tr><td>Statement Fingerprint ID</td><td>The statement fingerprint ID of the latest statement execution.</td></tr><tr><td>Statement Execution</td><td>The <a href="/docs/v25.2/ui-statements-page#sql-statement-fingerprints">statement fingerprint</a> of the latest statement execution.</td></tr><tr><td>Status</td><td>The status of the transaction: <code>Failed</code> or <code>Completed</code>.</td></tr><tr><td>Insights</td><td>The <a href="#workload-insight-types">insight type</a> for the statement execution.</td></tr><tr><td>Start Time (UTC)</td><td>The timestamp when the statement execution started.</td></tr><tr><td>Elapsed Time</td><td>The time that elapsed to complete the statement execution.</td></tr><tr><td>User Name</td><td>The name of the user that invoked the statement execution.</td></tr><tr><td>Application Name</td><td>The name specified by the <a href="/docs/v25.2/show-vars#supported-variables"><code>application&#95;name</code></a> session setting.</td></tr><tr><td>Rows Processed</td><td>The total number of rows read and written.</td></tr><tr><td>Retries</td><td>The number of times the statement execution was <a href="/docs/v25.2/transactions#automatic-retries">retried</a>.</td></tr><tr><td>Contention Time</td><td>The amount of time the statement execution spent waiting in <a href="/docs/v25.2/performance-best-practices-overview#transaction-contention">contention</a>.</td></tr><tr><td>CPU Time</td><td>The amount of CPU time spent executing the statement. The CPU time represents the time spent and work done within SQL execution operators.<br/><br/>The CPU time includes time spent in the <a href="/docs/v25.2/architecture/sql-layer">SQL layer</a>. It does not include time spent in the <a href="/docs/v25.2/architecture/storage-layer">storage layer</a>.</td></tr><tr><td>Full Scan</td><td>Whether the execution performed a full scan of the table.</td></tr><tr><td>Transaction Fingerprint ID</td><td>The ID of the transaction fingerprint for the statement execution.</td></tr><tr><td>Latest Transaction Execution ID</td><td>The ID of the transaction execution for the statement execution.</td></tr></tbody></table>

### Statement Execution details

The statement execution details view provides more information on a statement execution insight.

#### Default details

This information is displayed for all insight types.

<table><thead><tr><th>Field/Column</th><th>Description</th></tr></thead><tbody><tr><td>Start Time</td><td>The timestamp when the statement execution started.</td></tr><tr><td>End Time</td><td>The timestamp when the statement execution ended.</td></tr><tr><td>Elapsed Time</td><td>The time that elapsed during statement execution.</td></tr><tr><td>CPU Time</td><td>The amount of CPU time spent executing the statement. The CPU time represents the time spent and work done within SQL execution operators. The CPU time includes time spent in the <a href="/docs/v25.2/architecture/sql-layer">SQL layer</a>. It does not include time spent in the <a href="/docs/v25.2/architecture/storage-layer">storage layer</a>.</td></tr><tr><td>Rows Read</td><td>The total number of rows read by the statement execution.</td></tr><tr><td>Rows Written</td><td>The total number of rows written by the statement execution.</td></tr><tr><td>Transaction Priority</td><td>The <a href="/docs/v25.2/transactions#set-transaction-priority">priority</a> of the transaction for the statement execution.</td></tr><tr><td>Full Scan</td><td>Whether the execution performed a full scan of the table.</td></tr><tr><td>Transaction Retries</td><td>The total number of retries of the transaction for the statement execution.</td></tr><tr><td>Session ID</td><td>The ID of the <a href="/docs/v25.2/ui-sessions-page">session</a> the statement was executed from.</td></tr><tr><td>Transaction Fingerprint ID</td><td>The ID of the transaction fingerprint for the statement execution.</td></tr><tr><td>Transaction Execution ID</td><td>The ID of the transaction execution for the statement execution.</td></tr><tr><td>Statement Fingerprint ID</td><td>The fingerprint ID of the statement fingerprint for the statement execution.</td></tr><tr><td>Insights</td><td>The <a href="#workload-insight-types">insight type</a>.</td></tr><tr><td>Details</td><td>Provides details on the insight. For example, if the insight type is High Contention, <strong>Time Spent Waiting</strong> and <strong>Description</strong> are displayed. If the insight type is Failed Execution, <strong>Error Code</strong> and <strong>Error Message</strong> are displayed.</td></tr></tbody></table>

#### Conditional details

This information is displayed for only the [**High Contention**](#high-contention) insight type. All statement executions flagged with this insight type will display a **Statement with ID &#123;statement ID&#125; waited on** section which provides details of the blocking transaction execution.

<table><thead><tr><th>Column</th><th>Description</th></tr></thead><tbody><tr><td>Transaction Execution ID</td><td>The execution ID of the blocking transaction execution.</td></tr><tr><td>Transaction Fingerprint ID</td><td>The transaction fingerprint ID of the blocking transaction execution.</td></tr><tr><td>Contention Time</td><td>The time that transactions with this execution ID were <a href="/docs/v25.2/performance-best-practices-overview#understanding-and-avoiding-transaction-contention">in contention</a> with other transactions within the specified time interval.</td></tr><tr><td>Database Name</td><td>The name of the contended database.</td></tr><tr><td>Schema Name</td><td>The name of the contended schema.</td></tr><tr><td>Table Name</td><td>The name of the contended table.</td></tr><tr><td>Index Name</td><td>The name of the contended index.</td></tr></tbody></table>

## Workload Insight types

The Workload Insights tab surfaces the following type of insights:

- [Failed Execution](#failed-execution)
- [High Contention](#high-contention)
- [High Retry Count](#high-retry-count)
- [Slow Execution](#slow-execution)
- [Suboptimal Plan](#suboptimal-plan)

### Failed Execution

The transaction or statement execution failed. The following screenshot shows a failed transaction execution:

<Frame>
  ![Failed transaction execution](/images/v25.2/transaction_executions_failed.png)
</Frame>

The following screenshot shows the default details of the preceding failed transaction execution.

<Frame>
  ![Failed transaction execution details](/images/v25.2/transaction_execution_details_failed.png)
</Frame>

The **Insights** column shows the name of the insight, in this case **Failed Execution**. The **Details** column provides the **Error Code** and **Error Message**. CockroachDB uses [PostgreSQL Error Codes](https://www.postgresql.org/docs/current/errcodes-appendix). In this example, Error Code `40001` is a `serialization_failure`.

#### Serialization conflict due to transaction contention

The following screenshot shows the conditional details of the preceding failed transaction execution. In this case, there was a *serialization conflict*, also known as an *isolation conflict*, due to [transaction contention](/docs/v25.2/performance-recipes#transaction-contention). (For transaction contention that causes *lock contention*, see [High Contention](#high-contention)).

<Frame>
  ![Failed transaction execution details conditional](/images/v25.2/transaction_execution_details_failed_conditional.png)
</Frame>

To capture more information in the event of a failed transaction execution due to a serialization conflict, set the [`sql.contention.record_serialization_conflicts.enabled`](/docs/v25.2/cluster-settings#setting-sql-contention-record-serialization-conflicts-enabled) cluster setting to `true` (default). With this setting enabled, when the **Error Code** is `40001` and the **Error Message** specifically has [`RETRY_SERIALIZABLE - failed preemptive refresh`](/docs/v25.2/transaction-retry-error-reference#failed_preemptive_refresh)`due to conflicting locks`, a conditional **Failed Execution** section is displayed with **Conflicting Transaction** and **Conflicting Location** information.

To troubleshoot, refer to the performance tuning recipe for [transaction retry errors](/docs/v25.2/performance-recipes#transaction-retry-error).

### High Contention

The transaction or statement execution experienced high [contention](/docs/v25.2/performance-recipes#transaction-contention) time according to the threshold set in the [`sql.insights.latency_threshold` cluster setting](/docs/v25.2/cluster-settings#setting-sql-insights-latency-threshold). This type of contention is also known as *lock contention*. (For transaction contention that causes *serialization conflict*, see [serialization conflict due to transaction contention](#serialization-conflict-due-to-transaction-contention).)

To troubleshoot, refer to the performance tuning recipe for [identifying and unblocking a waiting transaction](/docs/v25.2/performance-recipes#waiting-transaction).

The following screenshot shows the execution of a transaction flagged with **High Contention**:

<Frame>
  ![Transaction execution](/images/v25.2/transaction_execution.png)
</Frame>

The following screenshot shows the execution details of the preceding transaction execution:

<Frame>
  ![Transaction execution details](/images/v25.2/transaction_execution_details.png)
</Frame>

### High Retry Count

The statement execution experienced a high number of [retries](/docs/v25.2/transactions#automatic-retries) according to the threshold set in the [`sql.insights.high_retry_count.threshold` cluster setting](/docs/v25.2/cluster-settings#setting-sql-insights-high-retry-count-threshold).

### Slow Execution

The statement (or a statement in the transaction) experienced slow execution. Depending on the settings in [Configuration](#configuration), either of the following conditions trigger this insight:

- Execution time is greater than the value of the [`sql.insights.latency_threshold` cluster setting](/docs/v25.2/cluster-settings#setting-sql-insights-latency-threshold).
- Anomaly detection is enabled ( `sql.insights.anomaly_detection.enabled` ), execution time is greater than the value of `sql.insights.anomaly_detection.latency_threshold`, and [execution latency](/docs/v25.2/ui-sql-dashboard#kv-execution-latency-99th-percentile) is greater than the p99 latency and more than double the median latency. For details, see [Detect slow executions](#detect-slow-executions).

### Suboptimal Plan

The plan could be improved for some statement(s) in the transaction execution. Possible causes include outdated statistics and missing indexes.

The statement execution has resulted in one or more [index recommendations](#schema-insights-tab) that would improve the plan.

The following screenshot shows the statement execution of the query described in [Use the right index](/docs/v25.2/apply-statement-performance-rules#rule-2-use-the-right-index):

<Frame>
  ![Statement execution](/images/v25.2/statement_executions.png)
</Frame>

The following screenshot shows the execution details of the preceding statement execution:

<Frame>
  ![Statement execution details](/images/v25.2/statement_execution_details.png)
</Frame>

The **Insights** column shows the name of the insight, in this case **Suboptimal Plan**. The **Details** column provides details on the insight, such as a **Description** with the cause of the suboptimal plan and a **Recommendation** with a `CREATE INDEX` statement. The final column contains a **Create Index** button. Click the **Create Index** button to execute the recommended statement to mitigate the cause of the insight.

## Schema Insights tab

To display this view, click **Insights** in the left-hand navigation of the DB Console and select **Schema Insights**. This view lists the [indexes](/docs/v25.2/indexes) that have not been used and should be dropped, and/or the ones that should be created, altered, or replaced (based on statement execution).

- The drop recommendations are the same as those on the [**Databases**](/docs/v25.2/ui-databases-page#index-recommendations) page.
- The create, alter, and replace recommendations are the same as those on the [Explain Plans tab](/docs/v25.2/ui-statements-page#insights) on the Statements page. Whereas the **Explain Plans** tab shows all recommendations, the **Schema Insights** view shows only the latest recommendations for that statement fingerprint. If you execute a statement again after creating or updating an index, the recommendation disappears.

The following screenshot shows the insight that displays after you run the query described in [Use the right index](/docs/v25.2/apply-statement-performance-rules#rule-2-use-the-right-index) six or more times:

<Frame>
  ![Schema insight](/images/v25.2/schema_insight.png)
</Frame>

CockroachDB uses the threshold of six executions before offering an insight because it assumes that you are no longer merely experimenting with a query at that point.

- **Insights:** Contains one of the following insight types: **Create Index**, **Alter Index**, **Replace Index**, **Drop Unused Index**.
- **Details:** Details for each insight. Different insight types display different details fields:
    - **Create Index**, **Alter Index**, or **Replace Index**: A **Statement Fingerprint** field displays the statement fingerprint that would be optimized with the creation, alteration, or replacement of the index; and a **Recommendation** field displays the SQL query to create, alter, or replace the index.
    - **Drop Unused Index**: An **Index** field displays the name of the index to drop; and a **Description** field displays the reason for dropping the index.

[Admin users](/docs/v25.2/security-reference/authorization#admin-role) will see an action button in the final column, which will execute the SQL statement suggested by the schema insight, for example "Create Index". Upon clicking the action button, a confirmation dialog displays a warning about the cost of [online schema changes](/docs/v25.2/online-schema-changes) and the option to copy the SQL statement for later execution in a SQL client.

### `workload_index_recs` function

<Note>
**This feature is in [preview](/docs/stable/cockroachdb-feature-availability)** and subject to change. To share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc/en-us).
</Note>

<InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v25.2: The SQL built-in function [`workload_index_recs`](/docs/v25.2/functions-and-operators#workload_index_recs) returns index recommendations and the fingerprint IDs of the statements they impact. The function returns two columns:

- `index_rec` ( `STRING` ): Contains the index recommendation.
- `fingerprint_ids` ( `BYTES[]` ): Contains the fingerprint IDs of the affected statements.

You can use the `workload_index_recs` function to determine workload-level index recommendations.

By default, the function returns index recommendations sourced from all statement fingerprints in the [`crdb_internal.statement_statistics`](/docs/v25.2/crdb-internal#statement_statistics) table. When passed an optional [`TIMESTAMPTZ`](/docs/v25.2/timestamp) parameter, the function will provide workload-level index recommendations only for statements executed after the timestamp. For example, `SELECT workload_index_recs('2025-05-08 16:00:00+00');` returns index recommendations for statements executed after `'2025-05-08 16:00:00+00'`.

#### `workload_index_recs` example

After running the [query](/docs/v25.2/apply-statement-performance-rules#rule-2-use-the-right-index) mentioned in the preceding [**Schema Insights** tab](#schema-insights-tab) section, run the following related query more than six times to generate another **Create Index** insight.

```sql
SELECT
  name, users.city, rides.city, count(rides.id) AS sum
FROM
  users JOIN rides ON users.id = rides.rider_id
WHERE
  rides.start_time BETWEEN '2018-12-31 00:00:00' AND '2020-01-01 00:00:00'
GROUP BY
  name, users.city, rides.city
ORDER BY
  sum DESC
LIMIT
  10;
```

Run the `workload_index_recs` function to return the `CREATE INDEX` recommendation associated with two fingerprint IDs:

```sql
SELECT workload_index_recs();
```

```text
                                                       workload_index_recs
----------------------------------------------------------------------------------------------------------------------------------
  ("CREATE INDEX ON movr.public.rides (start_time) STORING (rider_id);","{""\\\\x95a325e25bdbdc06"",""\\\\x4784cb829aab2542""}")
```

To display the query strings corresponding to the fingerprint IDs, run a query that joins the `workload_index_recs` function with the [`crdb_internal.statement_statistics`](/docs/v25.2/crdb-internal#statement_statistics) table.

```sql
SELECT ss.index_recommendations,
(ss.statistics->'statistics'->>'lastExecAt')::TIMESTAMPTZ AS lastExecAt, -- Time the statement was last execut
ss.fingerprint_id,
ss.app_name,
ss.metadata->>'query' AS query
FROM crdb_internal.statement_statistics AS ss -- Return data from the statement_statistics table
JOIN (
    SELECT unnest((rec).fingerprint_ids) AS fingerprint_id -- Return each fingerprint ID from the array as a row
    FROM workload_index_recs() AS rec
) AS fids ON ss.fingerprint_id = fids.fingerprint_id
ORDER BY ss.index_recommendations, lastExecAt;
```

```text
                                index_recommendations                               |          lastexecat           |   fingerprint_id   |     app_name     |                                                                                                         query
------------------------------------------------------------------------------------+-------------------------------+--------------------+------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
  {"creation : CREATE INDEX ON movr.public.rides (start_time) STORING (rider_id);"} | 2025-05-08 15:59:21.969934+00 | \x4784cb829aab2542 | $ cockroach demo | SELECT name, count(rides.id) AS sum FROM users JOIN rides ON users.id = rides.rider_id WHERE rides.start_time BETWEEN _ AND _ GROUP BY name ORDER BY sum DESC LIMIT _
  {"creation : CREATE INDEX ON movr.public.rides (start_time) STORING (rider_id);"} | 2025-05-08 16:10:59.479173+00 | \x95a325e25bdbdc06 | $ cockroach demo | SELECT name, users.city, rides.city, count(rides.id) AS sum FROM users JOIN rides ON users.id = rides.rider_id WHERE rides.start_time BETWEEN _ AND _ GROUP BY name, users.city, rides.city ORDER BY sum DESC LIMIT _
```

## Search and filter

By default, the Workload Insights view shows all statements or transactions that have insights. By default, the Schema Insights view shows all Schema Insights.

### Search

To search using the search field:

1. Enter a string in the search box at the top of the tab. To search for exact terms in order, wrap the search string in quotes.
2. Press `Enter`.

    The list is filtered by the string.

### Time interval

In the Workload Insights view, to see transactions or statement executions within a specific time interval, select a time interval from the selector at the top of the tab. The time interval field supports preset time intervals (1 Hour, 6 Hours, 1 Day, etc.) and custom time intervals. To select a custom time interval, click the time interval field and select **Custom time interval**. In the **Start (UTC)** and **End (UTC)** fields select or type a date and time.

Use the arrow buttons to cycle through previous and next time intervals. To select the most recent interval, click **Now**. When you select a time interval, the same interval is selected in the [Metrics](/docs/v25.2/ui-overview#metrics) page.

<Note>
It's possible to select an interval for which no workload insights exist.
</Note>

### Filter

To filter the results on the **Workload Insights** or **Schema Insights** view:

1. Click the **Filters** field.
    - To filter by [application](/docs/v25.2/connection-parameters#additional-connection-parameters), select **Application Name** and select one or more applications.
        - Queries from the SQL shell are displayed under the `$ cockroach` app.
        - If you haven't set `application_name` in a client connection string, it appears as `unset`.
    - To filter by one or more insight types, select **Workload Insight Type** or **Schema Insight Type** and select one or more types.
2. Click **Apply**

## Configuration

You can configure the behavior of insights using the following [cluster settings](/docs/v25.2/cluster-settings).

### Workload insights settings

You can configure [**Workload Insights**](#workload-insights-tab) with the following [cluster settings](/docs/v25.2/cluster-settings):

<table><thead><tr><th>Setting</th><th>Description</th><th>Where used</th></tr></thead><tbody><tr><td><a href="/docs/v25.2/cluster-settings#setting-sql-insights-anomaly-detection-enabled"><code>sql.insights.anomaly&#95;detection.enabled</code></a></td><td>Whether or not anomaly insight detection is enabled. When true, CockroachDB checks if <a href="/docs/v25.2/ui-sql-dashboard#kv-execution-latency-99th-percentile">execution latency</a> was greater than the p99 latency and more than double the median latency.</td><td><a href="#statement-executions-view">Statement executions</a></td></tr><tr><td><a href="/docs/v25.2/cluster-settings#setting-sql-insights-anomaly-detection-latency-threshold"><code>sql.insights.anomaly&#95;detection.latency&#95;threshold</code></a></td><td>The latency threshold that triggers monitoring a statement fingerprint for unusually slow execution.</td><td><a href="#statement-executions-view">Statement executions</a></td></tr><tr><td><a href="/docs/v25.2/cluster-settings#setting-sql-insights-anomaly-detection-memory-limit"><code>sql.insights.anomaly&#95;detection.memory&#95;limit</code></a></td><td>The maximum amount of memory allowed for tracking statement latencies.</td><td><a href="#statement-executions-view">Statement executions</a></td></tr><tr><td><a href="/docs/v25.2/cluster-settings#setting-sql-insights-latency-threshold"><code>sql.insights.latency&#95;threshold</code></a></td><td>The threshold at which the contention duration of a contended transaction is considered <strong>High Contention</strong> or statement execution is flagged for insights.</td><td><a href="#statement-executions-view">Statement</a> and <a href="#transaction-executions-view">Transaction executions</a></td></tr><tr><td><a href="/docs/v25.2/cluster-settings#setting-sql-insights-high-retry-count-threshold"><code>sql.insights.high&#95;retry&#95;count.threshold</code></a></td><td>The threshold at which a retry count is considered <strong>High Retry Count</strong>.</td><td><a href="#statement-executions-view">Statement executions</a></td></tr><tr><td><a href="/docs/v25.2/cluster-settings#setting-sql-insights-execution-insights-capacity"><code>sql.insights.execution&#95;insights&#95;capacity</code></a></td><td>The maximum number of execution insights stored in each node.</td><td><a href="#statement-executions-view">Statement executions</a></td></tr><tr><td><a href="/docs/v25.2/cluster-settings#setting-sql-contention-event-store-capacity"><code>sql.contention.event&#95;store.capacity</code></a></td><td>The in-memory storage capacity of the contention event store in each nodes.</td><td><a href="#transaction-executions-view">Transaction executions</a></td></tr><tr><td><a href="/docs/v25.2/cluster-settings#setting-sql-contention-event-store-duration-threshold"><code>sql.contention.event&#95;store.duration&#95;threshold</code></a></td><td>The minimum contention duration to cause contention events to be collected into the <code>crdb&#95;internal.transaction&#95;contention&#95;events</code> table.</td><td><a href="#transaction-executions-view">Transaction executions</a></td></tr><tr><td><a href="/docs/v25.2/cluster-settings#setting-sql-contention-record-serialization-conflicts-enabled"><code>sql.contention.record&#95;serialization&#95;conflicts.enabled</code></a></td><td>enables recording <code>40001</code> errors, along with metadata about conflicting transactions, as <code>SERIALIZATION&#95;CONFLICT</code> contention events into <code>crdb&#95;internal.transaction&#95;contention&#95;events</code><br/><br/><strong>Default</strong>: <code>true</code></td><td><a href="#transaction-executions-view">Transaction executions</a></td></tr></tbody></table>

#### Detect slow executions

There are two different methods for detecting slow executions. By default, they are both enabled and you can configure them based on your workload.

The first method flags all executions running longer than [`sql.insights.latency_threshold`](/docs/v25.2/cluster-settings#setting-sql-insights-latency-threshold). This is analogous to checking the [slow query log](/docs/v25.2/logging-use-cases#sql_perf).

The second method attempts to detect **unusually slow executions**. You can enable this detection with [`sql.insights.anomaly_detection.enabled`](/docs/v25.2/cluster-settings#setting-sql-insights-anomaly-detection-enabled) and configure it with [`sql.insights.anomaly_detection.latency_threshold`](/docs/v25.2/cluster-settings#setting-sql-insights-anomaly-detection-latency-threshold). CockroachDB will then keep a streaming histogram in memory for each distinct statement fingerprint that has seen an execution latency longer than `sql.insights.anomaly_detection.latency_threshold`, and will flag any execution with a latency in the 99th percentile (greater than p99) for its fingerprint.

Additional controls filter out executions that are less actionable:

- The execution's latency must also be longer than twice the median latency ( `> 2*p50` ) for that fingerprint. This ensures that the elevated latency is significant enough to warrant attention.
- The execution's latency must also be longer than `sql.insights.anomaly_detection.latency_threshold`. Some executions are slower than usual, but are still fast enough for the workload.

The [`sql.insights.anomaly_detection.memory_limit` cluster setting](/docs/v25.2/cluster-settings#setting-sql-insights-anomaly-detection-memory-limit) cluster setting limits the amount of memory available for tracking these streaming latency histograms. When this threshold is surpassed, the least-recently touched histogram is evicted. The default setting is sufficient for tracking about 1,000 fingerprints.

You can track the `sql.insights.anomaly_detection.memory` and `sql.insights.anomaly_detection.evictions` [metrics](/docs/v25.2/ui-custom-chart-debug-page) to determine if the settings are appropriate for your workload. If you see a steady stream of evictions or churn, you can either raise the `sql.insights.anomaly_detection.memory_limit` cluster setting, to allow for more storage; or raise the `sql.insights.anomaly_detection.latency_threshold` cluster setting, to examine fewer statement fingerprints.

### Schema insights settings

You can configure the index recommendations in the [**Schema Insights** tab](#schema-insights-tab), [**Explain Plans** tab](/docs/v25.2/ui-statements-page#insights), and [**Databases** page](/docs/v25.2/ui-databases-page) with the following [cluster settings](/docs/v25.2/cluster-settings):

<table><thead><tr><th>Setting</th><th>Description</th><th>Where used</th></tr></thead><tbody><tr><td><a href="/docs/v25.2/cluster-settings#setting-sql-metrics-statement-details-index-recommendation-collection-enabled"><code>sql.metrics.statement&#95;details.index&#95;recommendation&#95;collection.enabled</code></a></td><td>Whether or not index recommendations are enabled for indexes that could be or are used during statement execution.</td><td><a href="#schema-insights-tab">Schema Insights</a> and <a href="/docs/v25.2/ui-statements-page#explain-plans">Explain Plans tab</a></td></tr><tr><td><a href="/docs/v25.2/cluster-settings"><code>sql.index&#95;recommendation.drop&#95;unused&#95;duration</code></a></td><td>The duration of time an index must be unused before a recommendation to drop it.</td><td><a href="#schema-insights-tab">Schema Insights</a> and <a href="/docs/v25.2/ui-databases-page">Databases</a></td></tr><tr><td><a href="/docs/v25.2/cluster-settings#setting-sql-metrics-statement-details-max-mem-reported-idx-recommendations"><code>sql.metrics.statement&#95;details.max&#95;mem&#95;reported&#95;idx&#95;recommendations</code></a></td><td>The maximum number of reported index recommendations stored in memory.</td><td><a href="#schema-insights-tab">Schema Insights</a> and <a href="/docs/v25.2/ui-statements-page#explain-plans">Explain Plans tab</a></td></tr></tbody></table>

## See also

- [Statements page](/docs/v25.2/ui-statements-page)
- [Transactions page](/docs/v25.2/ui-transactions-page)
- [Databases page](/docs/v25.2/ui-databases-page)
- [Assign privileges](/docs/v25.2/security-reference/authorization#managing-privileges)
